# loopy

./: .gitignore  DESIGN.md  README.md  Taskfile.yml  pyproject.toml
.github/workflows/: python-package.yml
loopy/: __init__.py  cli.py  loop.py  models.py
tests/: __init__.py  test_cli.py  test_loop.py
