[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "loopy"
version = "0.1.0"
description = "A utility to run commands in a loop in a persistent, durable way"
dependencies = [
    "click>=8.0.0",
    "sqlmodel>=0.0.8",
]
authors = [
    {name = "Wayne Tan", email = "ywtan0811@gmail.com"},
]
readme = "README.md"
keywords = ["loop"]
classifiers = [
    "Development Status :: 4 - Beta",

    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",

    "Topic :: Software Development :: Build Tools",
    "Topic :: Utilities",

    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
]
license = "GPL-3.0-or-later"
license-files = ["LICEN[CS]E"]

[project.scripts]
loopy = "loopy.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-mock>=3.0.0",
]
